2010-06-01  Quentin Mathe <quentin.mathe@gmail.com>

	Fixed composite operator to behave correctly and added a new draw 
	operator to get -[NSImage drawXXX] methods work exactly as Cocoa and 
	improve the drawing performance in some cases.
	Eliminated all flipping checks in the backend to ensure the flipping 
	remains an high-level AppKit concept.
	* Source/gsc/GSContext.m:
	(-GSdraw:toPoint:fromRect:operation:fraction:): Added.
	This method calls -drawGState:fromRect:toPoint:op:fraction:.
	* Headers/gsc/GSGState.h (-drawGState:fromRect:toPoint:op:): Added 
	as an informal protocol which can be implemented by subclasses
	* Source/cairo/CairoContext.m (-supportsDrawGState): Added overriden 
	implementation that enables -drawGState:fromRect:toPoint:op:fraction:.
	* Source/cairo/CairoGState.m:
	(-drawOrientationMarkersIn:): Added.
	(-DPSimage::::::): Removed flipping check.
	(-compositeGState:fromRect:toPoint:op:fraction:): Fixed to precisely 
	implement the PostScript behavior which is to ignore rotation and 
	scaling effect for the content but not for the destination point.
	Also documented in details since this code is complex.
	(-drawGState:fromRect:toPoint:op:fraction:): Added.

2010-05-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/x11/XGDragView.m
	* Source/gsc/GSGState.m
	Added missing imports.

2010-05-16 17:39-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h
	* Source/win32/w32_general.m
	* Source/win32/WIN32Server.m: Added code to re-activate the
	theme when the theme changes on Windows.

2010-05-11 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Make cairo the default backend. Fall back to art
	and xlib gracefully.
	* configure: Regenerate.

2010-05-10  Adam Fedor  <fedor@gnu.org>

	* Fix release documentation

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.19.0 Unstable release

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.18.0

2010-04-20 Doug Simons <doug.simons@testplant.com>
