@@ -1,3 +1,9 @@
+2010-06-06 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m
+	(-compositeGState:fromRect:toPoint:op:fraction:): Move the usage
+	of _ct and source->_ct after the check whether they are set.
+
 2010-06-01  Quentin Mathe <quentin.mathe@gmail.com>
 
 	Fixed composite operator to behave correctly and added a new draw 
